# verena

./: .gitignore  LICENSE
flutter_app/: pubspec.yaml
flutter_app/lib/: app.dart  main.dart
flutter_app/lib/capture/: capture_painter.dart  capture_region.dart  screen_capture_overlay.dart
flutter_app/lib/db/: capture.dart  capture_db_service.dart  snapshot_db_service.dart  verena_db.dart
flutter_app/lib/ffi/: bindings.dart  native_api.dart  native_structs.dart
flutter_app/lib/models/: capture_result.dart
flutter_app/lib/screens/: home_screen.dart
flutter_app/lib/services/: capture_pipeline.dart  capture_service.dart  capture_service2.dart  capture_worker.dart  folder_generation.dart  name_generation.dart  rust_bridge.dart  settings.dart
rust_engine/: Cargo.toml
rust_engine/src/: lib.rs
rust_engine/src/capture/: active_window.rs  capture_engine.rs  capture_loop.rs  engine.rs  hash.rs  mod.rs  window.rs
rust_engine/src/ffi/: mod.rs
rust_engine/src/types/: capture_result.rs  frame_event.rs  mod.rs
