[package]
name = "verena_capture"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_Foundation"
]}
screenshots = "0.8"
image = "0.25.10"
win-screenshot = "4.0.14"
blake3 = "1.5"